Generate Pelican site

--- a/index.html
+++ b/index.html
@@ -53,9 +53,9 @@
   </div>
   <div class="article_text">
     <p>Hi, you can call me Eugene.</p>
-<p>Curently I'm working as an infrastructure developer in <a href="https://kira.network/">KiraNetwork</a>.</p>
-<p>If you are intersted you can check our repository <a href="https://github.com/KiraCore">GitHub page</a>.</p>
-<p>The <a href="/blog">Blog</a> conten will include most recent documented steps on my doing different stuff.</p>
+<p>Currently I'm working as an infrastructure developer in <a href="https://kira.network/">KiraNetwork</a>.</p>
+<p>If you are interested you can check our repository <a href="https://github.com/KiraCore">GitHub page</a>.</p>
+<p>The <a href="/blog">Blog</a> content will include most recent documented steps on my doing different stuff.</p>
   </div>
 </article>
 
